# websocket_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat
client/: client.cpp
doc/: 协议命令.md
include/boost/: bind.hpp  function.hpp  ref.hpp  version.hpp
include/client/: device_client.h
include/common/: command_types.h  time_utils.h
include/server/: device_server.h
server/: server.cpp
src/: client.cpp  server.cpp
src/client/: client_main.cpp  device_client.cpp
src/common/: command_types.cpp  time_utils.cpp
src/server/: device_server.cpp  server_main.cpp
test/: CMakeLists.txt  protocol_test.cpp
